# smoothify

./: .gitignore  README.md  package.json  tsconfig.json
aiospotify/: pyproject.toml
aiospotify/aiospotify/: __init__.py  async_client.py  auth.py  client.py
aiospotify/aiospotify/models/: audio_analysis.py  audio_features.py  spotify_playlist.py  spotify_saved_track.py  spotify_search_result.py  spotify_track.py  spotify_user.py
aiospotify/aiospotify/models/abstract/: spotify_object.py  spotify_paging_object.py
aiospotify/aiospotify/resources/: audio_features.py  current_user_saved_tracks.py  spotify_object.py  spotify_saved_track.py  spotify_track.py
aiospotify/aiospotify/resources/abstract/: __init__.py  creatable_resource.py  deletable_resource.py  gettable_resource.py  listable_resource.py  resource.py  spotify_paging_object.py  spotify_resource.py  updateable_resource.py
aiospotify/aiospotify/resources/mixins/: spotify_paging_object.py
aiospotify/aiospotify/resources/playlists/: current_user_playlists.py
aiospotify/aiospotify/resources/search/: search.py
aiospotify/aiospotify/resources/tracks/: audio_analysis.py  audio_features.py  tracks.py
aiospotify/aiospotify/resources/users/: current_user.py  current_user_top_items.py  user.py
aiospotify/notebooks/: AsyncSpotify.ipynb
aiospotify/src/aiospotify/: client.py
backend/: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  backend.dockerfile  dev_server.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/scripts/: build-push.sh  build.sh  format-imports.sh  format.sh  lint.sh  prestart.sh  start-reload.sh  start.sh  test-backend-cov-html.sh  test-backend.sh  test-local.sh  test.sh  tests-start.sh
backend/scripts_server/: test-cov-html.sh  test.sh
backend/server/: backend_pre_start.py  celeryworker_pre_start.py  initial_data.py  main.py  tests_pre_start.py  utils.py  worker.py
backend/server/alembic/: env.py
backend/server/api/: deps.py
backend/server/api/api_v1/: api.py
backend/server/api/api_v1/endpoints/: items.py  login.py  smoothify_endpoints.py  users.py  utils.py
backend/server/core/: config.py  security.py
backend/server/crud/: __init__.py  base.py  crud_item.py  crud_user.py
backend/server/db/: base.py  init_db.py  session.py
backend/server/models/: item.py  user.py
backend/server/tests/: conftest.py
backend/server/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
backend/server/tests/crud/: test_item.py  test_user.py
backend/server/tests/utils/: item.py  user.py  utils.py
components/: SpotifyAnalysis.tsx
fe-vite/: index.html  package.json
fe-vite/src/: App.tsx  index.css
fe-vite/src/lib/: constants.ts  graphUtils.ts
fe-vite/src/lib/webWorkers/: tsne.ts
fe-vite/src/pages/: HomePage.tsx  SpotifyImplicitGrantCallbackPage.tsx  SpotifyImplicitGrantLoginPage.tsx
frontend/: README.md  package.json  tsconfig.json
frontend/components/: NoSSR.tsx  SpotifyAnalysis.tsx
frontend/lib/: constants.ts  graphUtils.tsx  spotifyClient.tsx
frontend/lib/webWorkers/: singleSourceBestPath.ts
frontend/pages/: _app.tsx  index.tsx
frontend/pages/api/auth/: [...nextauth].tsx
lib/: SpotifyAuth.tsx  constants.ts
next/: package.json
next/lib/: graphUtils.tsx
next/pages/: index.tsx  main.tsx
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pages/: _app.tsx  index.tsx
pages/api/auth/: [...nextauth].tsx
server/: .gitlab-ci.yml
smoothify/: .gitignore  README.md  pyproject.toml  setup.cfg
smoothify-server/: .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  pyproject.toml
smoothify-server/backend/app/: pyproject.toml
smoothify/notebooks/: Clustering.ipynb  Floyd Warshall.ipynb  K-D Tree.ipynb  Simulated Annealing.ipynb  Smoothest path.ipynb  features.csv  features_no_mode.csv  points.npy
smoothify/package/: pyproject.toml
smoothify/smoothify/: __init__.py  __main__.py  features.py
smoothify/smoothify/core/: __init__.py
smoothify/smoothify/features/: __init__.py
smoothify/smoothify/optim/: __init__.py  base.py  kd_tree.py
smoothify/smoothify/optim/bottleneck_tsp/: __init__.py  base.py  kd_tree.py
smoothify/smoothify/utils/: progress_parallel.py
smoothjl/: Manifest.toml  Project.toml
smoothjl/notebooks/: Shortest Path.jl  points.txt
smoothjl/smoothjl/: Project.toml
smoothjl/smoothjl/src/: smoothjl.jl
types/: next-auth.d.ts
