[tool.poetry]
name = "aiospotify"
version = "0.1.0"
description = ""
authors = ["Krishna Penukonda <penukonda.krishna.moorthy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
aiohttp = "^3.7.4"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
jupyterlab = "^3.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
