[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Krishna <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# Web server core
fastapi = "^0.54.1"
pydantic = "^1.4"
# Process management
uvicorn = "^0.11.3"
gunicorn = "^20.0.4"
tenacity = "^6.1.0"
# Async jobs
celery = "^4.4.2"
# Cryptography
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
# Emails
emails = "^0.5.15"
# Templating
jinja2 = "^2.11.2"
# Postgres
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
# Typing & stubs
mypy = "^0.770"
sqlalchemy-stubs = "^0.3"
# Formatting
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
# Testing & coverage
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
