[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Krishna Penukonda <hello@tasercake.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# Web server core
fastapi = "^0.75.1"
pydantic = "^1.4"
# Process management
uvicorn = "^0.17.6"
gunicorn = "^20.0.4"
tenacity = "^8.0.1"
# Async jobs
celery = "^5.2.6"
# Cryptography
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
# Emails
emails = "^0.6"
# Templating
jinja2 = "^3.1.1"
# Postgres
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
# Typing & stubs
mypy = "^0.942"
sqlalchemy-stubs = "^0.4"
# Formatting
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
# Testing & coverage
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
