[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend server for Smoothify"
authors = ["Krishna Penukonda <hello@tasercake.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
# Web server core
fastapi = "^0.75.1"
pydantic = { version = "^1.9.0", extras = ["email"] }
# Process management
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
tenacity = "^8.0.1"
# Async jobs
celery = "^5.2.6"
# Cryptography
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
# Emails
emails = "^0.6"
# Templating
jinja2 = "^3.1.1"
# Postgres
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.35"
Jinja2 = "^3.1.1"
# Monitoring & logging
structlog = "^21.5.0"
sentry-sdk = "^1.5.10"
python-multipart = "^0.0.5"
tekore = "^4.4.0"
fastapi-utils = "^0.2.1"
smoothify = {path = "../smoothify", develop = true}

[tool.poetry.group.dev.dependencies]
# Typing & stubs
mypy = "^0.942"
sqlalchemy-stubs = "^0.4"
# Formatting
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
# Testing & coverage
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
