[tool.poetry]
name = "smoothify-server"
version = "0.1.0"
description = "Smoothify Server"
authors = ["Krishna Penukonda <penukonda.krishna.moorthy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
