[tool.poetry]
name = "smoothify"
version = "0.1.0"
description = ""
authors = ["Krishna Penukonda <penukonda.krishna.moorthy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.3"
networkx = "^2.6.3"
scipy = "^1.7.1"
aiospotify = { path = "../aiospotify", develop = true }
simanneal = "^0.5.0"
more-itertools = "^8.10.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.11"
black = "^21.9b0"
hypertools = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
