[project]
name = "smoothify"
version = "0.1.0"
description = "Smooth paths through Spotify tracks"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {email = "penukonda.krishna.moorthy@gmail.com"},
  {name = "Krishna Penukonda"}
]

[project.urls]
homepage = "https://github.com/tasercake/smoothify"
repository = "https://github.com/tasercake/smoothify"

[build-system]
requires = [
    "setuptools ~= 58.0",
    "wheel",
]
build-backend = "setuptools.build_meta"
