[metadata]
name = smoothify
version = 0.1.0
description = Smooth paths through Spotify tracks
long_description = file: README.md

[options]
install_requires =
    # Spotify API
    tekore ~= 4.0.0
    # Scientific computing
    numpy ~= 1.21.2
    pandas ~= 1.3.3
    scipy ~= 1.7.1
    scikit-learn~=1.0.2
    joblib ~= 1.1.0
    tqdm ~= 4.62.3
    # Language interop
    julia ~= 0.5.7
    # Notebooks & visualization
    jupyterlab ~= 3.1.11
    ipywidgets ~= 7.6.5
    matplotlib ~= 3.4.3
    seaborn ~= 0.11.2
    bokeh~=2.4.2
    # Dev tools
    black ~= 21.9b0
    mypy ~= 0.910
packages = find:
